<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/currency_min_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$" />

        <EditText
            android:id="@+id/min_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/min_price"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_m"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/currency_max_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$" />

        <EditText
            android:id="@+id/max_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/max_price"
            android:inputType="number" />
    </LinearLayout>

    <CheckBox android:id="@+id/checkbox_sale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_m"
        android:text="@string/sale" />

    <CheckBox android:id="@+id/checkbox_featured"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/featured" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_m"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_by"
            android:layout_marginRight="@dimen/spacing_l"
            android:layout_marginEnd="@dimen/spacing_l"/>

        <Spinner
            android:id="@+id/order_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"/>
    </LinearLayout>


</LinearLayout>